--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,18 @@
   "description": "Servidor em nodejs, criado para projeto tcc",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start1": "nodemon index.js"
   },
   "author": "Júlio Gonçalves | Diego Alves Openheimer",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.13"
+    "mongoose": "^5.4.13",
+    "winston": "^3.2.1"
   }
 }
