--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
     "nodemailer": "^5.1.1",
-    "winston": "^3.2.1"
+    "swagger-ui-express": "^4.0.2",
+    "winston": "^3.2.1",
+    "yamljs": "^0.3.0"
   }
 }
