--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.1.0",
@@ -17,7 +19,8 @@
     "react-swipeable-views": "^0.13.3",
     "react-toastify": "^5.3.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rxjs": "^6.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
