--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.13",
+    "mongoose-history-plugin": "^1.6.1",
     "mongoose-paginate": "^5.0.3",
     "nodemailer": "^5.1.1",
     "swagger-ui-express": "^4.0.2",
