--- a/mosca/package.json
+++ b/mosca/package.json
@@ -4,6 +4,7 @@
   "description": "servidor mqtt criado para comunicação entre servidor http, raspberry e aplicativo móvel",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Diego Alves Openheimer | Júlio Gonçalves",
