--- a/raspberry_locator/package.json
+++ b/raspberry_locator/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "gps": "^0.5.1",
-    "serialport": "^7.1.4"
+    "mqtt": "^3.0.0",
+    "node-sass": "^4.12.0",
+    "serialport": "^7.1.4",
+    "systeminformation": "^4.14.4"
   }
 }
