--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "jwt-decode": "^2.2.0",
+    "material-table": "^1.41.0",
     "mqtt": "^3.0.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
