--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -7,12 +7,14 @@
     "@material-ui/icons": "^4.2.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "material-table": "^1.41.0",
     "mqtt": "^3.0.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-input-mask": "^2.0.4",
