--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -9,6 +9,10 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
+    "html-react-parser": "^0.9.1",
+    "html-to-draftjs": "^1.4.0",
     "jwt-decode": "^2.2.0",
     "material-table": "^1.41.0",
     "mqtt": "^3.0.0",
@@ -16,6 +20,7 @@
     "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-google-maps": "^9.4.5",
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^1.1.2",
