--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-google-maps": "^9.4.5",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^1.1.2",
     "react-redux": "^7.1.0",
