--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.13",
     "mongoose-paginate": "^5.0.3",
+    "mqtt": "^3.0.0",
     "nodemailer": "^5.1.1",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1",
