--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.2",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
