--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -19,6 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rxdart: ^0.22.2
+  dio: ^2.1.16
+  connectivity: ^0.4.4
+  fluttertoast: ^3.1.2
+  bloc_pattern: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
