--- a/web/bus-locator/package.json
+++ b/web/bus-locator/package.json
@@ -40,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pm2": "pm2 start 'serve -s build -l 3000' --name web"
   },
   "eslintConfig": {
     "extends": "react-app"
