--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   connectivity: ^0.4.4
   fluttertoast: ^3.1.2
   bloc_pattern: ^2.3.1
+  shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
