--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   fluttertoast: ^3.1.2
   bloc_pattern: ^2.3.1
   shared_preferences: ^0.5.3+4
+  sembast: ^2.0.1+2
+  path_provider: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
