--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   sembast: ^2.0.1+2
   path_provider: ^1.3.0
   corsac_jwt: ^0.1.2
+  flutter_html: ^0.10.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
