--- a/bus_locator_mobile/android/app/src/main/AndroidManifest.xml
+++ b/bus_locator_mobile/android/app/src/main/AndroidManifest.xml
@@ -31,5 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCfg6PgpQycYtUFaSRl336lsM8EDPmpmfI"/>
     </application>
 </manifest>
