--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   path_provider: ^1.3.0
   corsac_jwt: ^0.1.2
   flutter_html: ^0.10.4
+  google_maps_flutter: ^0.5.21+3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
