--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   corsac_jwt: ^0.1.2
   flutter_html: ^0.10.4
   google_maps_flutter: ^0.5.21+3
-
+  location: ^2.3.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,9 +53,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/
+
   fonts:
     - family: WorkSans
       fonts:
