--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_html: ^0.10.4
   google_maps_flutter: ^0.5.21+3
   location: ^2.3.5
+  flutter_rating_bar: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
