--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_maps_flutter: ^0.5.21+3
   location: ^2.3.5
   flutter_rating_bar: ^3.0.0
+  mqtt_client: ^5.5.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
