--- a/bus_locator_mobile/android/app/build.gradle
+++ b/bus_locator_mobile/android/app/build.gradle
@@ -63,11 +63,11 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
 
-            useProguard true
+            // useProguard true
 
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
