--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^5.1.1",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2",
     "yamljs": "^0.3.0"
   }
 }
