--- a/bus_locator_mobile/pubspec.yaml
+++ b/bus_locator_mobile/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   rxdart: ^0.22.2
-  dio: ^2.1.16
+  dio: 3.0.9
   connectivity: ^0.4.4
   fluttertoast: ^3.1.2
   bloc_pattern: ^2.3.1
